flapivor/tests/m3/hopix/typechecker/good/37-pattern-matching-01.hopix
type T = T

val t : T = case T<> { T<> => T<> }
