flapivor/tests/m3/hopix/typechecker/bad/29-record-03.hopix
type T = { l : String }

val x : T = { l = 0 }<>